rossoctl/examples/identity/keycloak_token_exchange/resources/spire/workload_api.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: client
  name: client
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: client
    spec:
      containers:
      - image: docker.io/maiariyer/tls-client:v1
        name: tls-client
        args:
        - -config
        - ./conf/helper.conf
        resources: {}
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /spiffe-workload-api
          readOnly: true
        - name: cert-volume
          mountPath: /opt
        - mountPath: /conf
          name: workload-config
      volumes:
      - name: spiffe-workload-api
        csi:
          driver: "csi.spiffe.io"
          readOnly: true
      - name: cert-volume
        emptyDir: {}
      - configMap:
          name: workload-config
        name: workload-config
